sonarqube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonar
  labels:
    name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sonarqube
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: sonarqube
      labels:
        name: sonarqube
    spec:
      serviceAccountName: sonarqube
      containers:
        - name: sonarqube
          image: sonarqube:latest # <- LTS version as of 2025
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "3Gi"
          ports:
            - containerPort: 9000
              name: sonarqube
          volumeMounts:
            - mountPath: "/opt/sonarqube/data/"
              name: sonar-data
            - mountPath: "/opt/sonarqube/extensions/"
              name: sonar-extensions
            - mountPath: "/opt/sonarqube/logs/"
              name: sonar-logs
      volumes:
        - name: sonar-data
          persistentVolumeClaim:
            claimName: sonar-data
        - name: sonar-extensions
          persistentVolumeClaim:
            claimName: sonar-extensions
        - name: sonar-logs
          emptyDir: {}  # ephemeral log storage
