sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonar
  labels:
    app: sonarqube
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - sonarqube.example.com
    secretName: sonarqube-tls
  rules:
  - host: sonarqube.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonar
            port:
              number: 9000
